objects/Static_Code_Analysis_Violation__c.object
<CustomObject>
    <description>This object will hold the details about every single violation found in Apex classes according to the specified ruleset.</description>
    <fields>
        <fullName>File__c</fullName>
        <description>File analyzed by PMD.</description>
        <label>File</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_URL_Link__c</fullName>
        <formula>HYPERLINK(Info_URL__c, IMAGE(&apos;/img/msg_icons/info24.png&apos;, &apos;Info URL&apos;, 18, 18) )</formula>
        <label>Info URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_URL__c</fullName>
        <description>Link to the PMD documentation about the rule violated.</description>
        <label>Info URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Line__c</fullName>
        <description>Line of code that violated the rule.</description>
        <label>Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Help message thrown by the rule violated.</description>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Level of severity of the rule violated.</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <description>Name of the rule violated.</description>
        <label>Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>6 -  Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Static_Code_Analysis_Result__c</fullName>
        <label>Static Code Analysis Result</label>
        <referenceTo>Static_Code_Analysis_Result__c</referenceTo>
        <relationshipLabel>Static Code Analysis Violations</relationshipLabel>
        <relationshipName>Static_Code_Analysis_Violations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Static Code Analysis Violation</label>
    <nameField>
        <displayFormat>SCV-{000000}</displayFormat>
        <label>Static Code Analysis Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Static Code Analysis Violations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>